--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-cart></app-cart>
+<nav>
+    <a routerLink="''">Home</a>
+    <a routerLink="/form/add">Form</a>
+    <a routerLink="/form/delete/1">Delete Form</a>
+    <a routerLink="/form/view/2">View Form</a>
+</nav>
+<router-outlet></router-outlet>
